[project]
name = "asd-strat"
version = "0.1.0"
description = "The Stratification of Autism Spectrum Disorder Using Multimodal, Semi-supervised Cluster Analysis of the SPARK Cohort"
requires-python = ">=3.13"
dependencies = [
    "black>=25.1.0",
    "matplotlib>=3.10.3",
    "myst-parser>=4.0.1",
    "pandas>=2.3.1",
    "pandas-stubs==2.3.0.250703",
    "pyarrow==21.0.0",
    "pydata-sphinx-theme>=0.16.1",
    "pyfonts>=1.1.1",
    "scikit-learn==1.5.0",
    "scipy-stubs==1.16.0.2",
    "sphinx>=8.2.3",
    "sphinx-autobuild>=2024.10.3",
    "stepmix==2.2.3",
    "tqdm>=4.67.1",
    "typer>=0.16.0",
]
